Updated meta tags for social previews

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,25 @@
 
 	<title>Windchill</title>
 
+		<!-- Primary Meta Tags -->
+	<title>Windchill</title>
+	<meta name="title" content="Windchill">
+	<meta name="description" content="Find what temperature it feels like outside, counting wind!">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://windchill.netlify.app/">
+	<meta property="og:title" content="Windchill">
+	<meta property="og:description" content="Find what temperature it feels like outside, counting wind!">
+	<meta property="og:image" content="https://i.ibb.co/ZSxsBws/windchillbanner.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://windchill.netlify.app/">
+	<meta property="twitter:title" content="Windchill">
+	<meta property="twitter:description" content="Find what temperature it feels like outside, counting wind!">
+	<meta property="twitter:image" content="https://i.ibb.co/ZSxsBws/windchillbanner.png">
+
 	<link rel='icon' type='image/png' href='/windsolid.svg'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
